pricing and new vercel template done

--- a/agents-docs/content/docs/pricing.mdx
+++ b/agents-docs/content/docs/pricing.mdx
@@ -6,118 +6,114 @@ icon: "LuCreditCard"
 
 Inkeep offers three ways to get started: **Open Source** (free forever), **Cloud** (managed deployment), and **Enterprise** (managed platform with dedicated support).
 
-## Open Source (free)
+<Cards>
+  <Card title="Open Source (free)" icon="LuCode" href="/get-started/quick-start">
+    Everything you need to create agentic assistants.
+    
+    - Visual Builder & SDK
+    - MCP Servers & Tools
+    - Observability & UI Lib
+    - Use with Claude/Cursor
+    - Deploy to Vercel or Docker
 
-Everything you need to create agentic assistants, copilots, and workflows that help your customers and your team.
+    Follow the &lt;1min Quick Start →
+  </Card>
+  <Card title="Inkeep Cloud" icon="LuCloud" href="https://inkeep.com/cloud-waitlist">
+    Managed deployment with usage-based billing. Everything in Open Source plus:
+    
+    - Fully managed cloud hosting
+    - No infra management
+    - Transparent, usage-based pricing
 
-Includes:
-- No-Code Visual Builder
-- TypeScript Agents SDK
-- MCP Servers and Custom Tools
-- Observability via UI & OpenTelemetry
-- UI Component Library
-- Use with Claude, ChatGPT, & Cursor
+    Sign up for the Cloud waitlist →
+  </Card>
+  <Card title="Inkeep Enterprise" icon="LuBuilding" href="https://inkeep.com/demo">
+    Managed platform with dedicated support. Everything in Open Source plus:
+    
+    - Unified AI Search (Managed RAG)
+    - Use from Slack & Support Platforms
+    - PII removal and data controls
+    - Cloud Hosting & User Management
+    - Trainings, enablement, and support
+    - Dedicated forward deployed engineer
 
-[Follow the &lt;1min Quick Start →](/get-started/quick-start)
-
-## Cloud
-
-Deploy your agents to Inkeep's managed cloud platform with llm usage-based billing.
-
-Everything in Open Source, plus:
-- Fully managed cloud hosting
-- No infrastructure management required
-- Transparent, usage-based pricing
-
-[Sign up for the Cloud waitlist →](https://inkeep.com/cloud-waitlist)
-
-## Enterprise
-
-Managed platform and a trusted partner to accelerate AI agent adoption and deployment.
-
-Everything in Open Source, plus:
-- Unified AI Search (Managed RAG)
-- Use from Slack & Support Platforms
-- PII removal and data controls
-- Cloud Hosting & User Management
-- Trainings, enablement, and support
-- Dedicated forward deployed engineer
-
-[Schedule a Demo →](https://inkeep.com/demo)
+    Schedule a Demo →
+  </Card>
+</Cards>
 
 ## Feature Comparison
 
 ### Building Agents
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| No-Code Visual Builder | ✓ | ✓ |
-| Agent Developer SDK (TypeScript) | ✓ | ✓ |
-| 2-way Sync: Edit in Code or UI | ✓ | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| No-Code Visual Builder | ✓ | ✓ | ✓ |
+| Agent Developer SDK (TypeScript) | ✓ | ✓ | ✓ |
+| 2-way Sync: Edit in Code or UI | ✓ | ✓ | ✓ |
 
 ### Core Framework
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| Take actions on any MCP Server, App, or API | ✓ | ✓ |
-| Multi-agent Architecture (Teams of Agents) | ✓ | ✓ |
-| Agent Credential and Permissions Management | ✓ | ✓ |
-| Agent Traces available in UI and OTEL | ✓ | ✓ |
-| Talk to Agents via A2A, MCP, and Vercel AI SDK formats | ✓ | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| Take actions on any MCP Server, App, or API | ✓ | ✓ | ✓ |
+| Multi-agent Architecture (Teams of Agents) | ✓ | ✓ | ✓ |
+| Agent Credential and Permissions Management | ✓ | ✓ | ✓ |
+| Agent Traces available in UI and OTEL | ✓ | ✓ | ✓ |
+| Talk to Agents via A2A, MCP, and Vercel AI SDK formats | ✓ | ✓ | ✓ |
 
 ### Talk to Your Agents (Out of the Box)
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| With Claude, ChatGPT, and Cursor | ✓ | ✓ |
-| With Slack, Discord, and Teams integrations | — | ✓ |
-| With Zendesk, Salesforce, and support integrations | — | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| With Claude, ChatGPT, and Cursor | ✓ | ✓ | ✓ |
+| With Slack, Discord, and Teams integrations | — | — | ✓ |
+| With Zendesk, Salesforce, and support integrations | — | — | ✓ |
 
 ### Building Agent UIs
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| Agent Messages with Custom UIs (forms, cards, etc.) | ✓ | ✓ |
-| Custom UIs using Vercel AI SDK format | ✓ | ✓ |
-| Out-of-box Chat Components (React) | ✓ | ✓ |
-| Out-of-box Chat Components (JavaScript) | — | ✓ |
-| Answers with Inline Citations | ✓ | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| Agent Messages with Custom UIs (forms, cards, etc.) | ✓ | ✓ | ✓ |
+| Custom UIs using Vercel AI SDK format | ✓ | ✓ | ✓ |
+| Out-of-box Chat Components (React) | ✓ | ✓ | ✓ |
+| Out-of-box Chat Components (JavaScript) | — | — | ✓ |
+| Answers with Inline Citations | ✓ | ✓ | ✓ |
 
 ### Unified AI Search (Managed RAG)
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| Real-time fetch from databases, APIs, and the web | ✓ | ✓ |
-| Automated Ingestion of public sources (docs, help center, etc.) | — | ✓ |
-| Automated Ingestion of private sources (Notion, Confluence, etc.) | — | ✓ |
-| Optimized Retrieval and Search (Managed RAG) | — | ✓ |
-| Semantic Search | — | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| Real-time fetch from databases, APIs, and the web | ✓ | ✓ | ✓ |
+| Public sources ingestion (docs, help center, etc.) | — | — | ✓ |
+| Private sources ingestion (Notion, Confluence, etc.) | — | — | ✓ |
+| Optimized Retrieval and Search (Managed RAG) | — | — | ✓ |
+| Semantic Search | — | — | ✓ |
 
 ### Insights & Analytics
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| AI Reports on Knowledge Gaps | — | ✓ |
-| AI Reports on Product Feature Gaps | — | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| AI Reports on Knowledge Gaps | — | — | ✓ |
+| AI Reports on Product Feature Gaps | — | — | ✓ |
 
 ### Authentication and Authorization
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| Single Sign-on | — | ✓ |
-| Role-Based Access Control | — | ✓ |
-| Audit Logs | — | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| Single Sign-on | — | — | ✓ |
+| Role-Based Access Control | — | — | ✓ |
+| Audit Logs | — | — | ✓ |
 
 ### Security
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| PII Removal | — | ✓ |
-| Uptime and Support SLAs | — | ✓ |
-| SOC II Type II and Pentest Reports | — | ✓ |
-| GDPR, HIPAA, DPA, and Infosec Reviews | — | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| PII Removal | — | — | ✓ |
+| Uptime and Support SLAs | — | — | ✓ |
+| SOC II Type II and Pentest Reports | — | — | ✓ |
+| GDPR, HIPAA, DPA, and Infosec Reviews | — | — | ✓ |
 
 ### Deployment
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| Hosting Types | Self-hosted | Cloud, Hybrid, or Self-Hosted |
-| Support Type | Community | Dedicated Engineering Team |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| Hosting Types | Self-hosted | Cloud | Cloud, Hybrid, or Self-hosted |
+| Support Type | Community | Community | Dedicated Engineering Team |
 
 ### Forward Deployed Engineer Program
-| Feature | Open Source | Enterprise |
-|---------|-------------|------------|
-| Dedicated Architect and AI Agents Engineer | — | ✓ |
-| 1:1 Office Hours and Trainings | — | ✓ |
-| Structured Pilot | — | ✓ |
+| Feature | Open Source | Cloud | Enterprise |
+|---------|:-----------:|:-----:|:----------:|
+| Dedicated Architect and AI Agents Engineer | — | — | ✓ |
+| 1:1 Office Hours and Trainings | — | — | ✓ |
+| Structured Pilot | — | — | ✓ |
