docs improvements finished

--- a/agents-docs/content/docs/overview.mdx
+++ b/agents-docs/content/docs/overview.mdx
@@ -66,7 +66,7 @@ Agents can also be used for **Agentic Workflow Automation** like:
 - Observability via a Traces UI & OpenTelemetry
 - Easy deployment to Vercel and using Docker
 
-Interested in a managed platform? Sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise).
+Interested in a managed platform? Sign up for the [Inkeep Cloud waitlist](https://inkeep.com/cloud-waitlist) or learn about [Inkeep Enterprise](https://inkeep.com/enterprise). You can view a full feature comparison [here](/pricing#feature-comparison).
 
 ## Our Approach
 
