--- a/agents-docs/content/docs/tutorials/mcp-servers/gram.mdx
+++ b/agents-docs/content/docs/tutorials/mcp-servers/gram.mdx
@@ -6,9 +6,13 @@ icon: "brand/Gram"
 
 ## Overview
 
-Gram by Speakeasy turns any OpenAPI specification into a production-ready MCP server. Upload your API spec, and Gram automatically generates tool definitions, handles hosting and authentication, and deploys your server—so you can focus on building powerful agents.
+Gram by Speakeasy turns any OpenAPI specification into a production-ready MCP server. Upload your API spec, and Gram automatically generates tool definitions, handles hosting and authentication, and deploys your server- so you can focus on building powerful agents.
 
 Visit [Gram's documentation](https://www.speakeasy.com/docs/gram/getting-started/openapi) for a complete guide.
+
+<Tip>
+For custom MCP server logic, use [Gram Functions](https://www.speakeasy.com/docs/gram/getting-started/typescript), Gram's TypeScript framework with managed deployment and hosting.
+</Tip>
 
 ### Step 1: Sign up for a Gram account
 
