--- a/agents-docs/content/docs/typescript-sdk/project-management.mdx
+++ b/agents-docs/content/docs/typescript-sdk/project-management.mdx
@@ -4,389 +4,4 @@ description: Learn how to manage projects in the Inkeep Agent Framework
 icon: "LuFolderOpen"
 ---
 
-## Overview
-
-Projects are the top-level organizational unit in your Inkeep workspace. Each project contains its own agents, sub agents, tools, data components, and environment configurations.
-
-## Workspace layout
-
-Workspaces are organized with the following directory structure:
-
-```
-workspace-root/                 
-├── package.json                 # Workspace package.json
-├── .env                         # Workspace environment variables
-├── src/  
-│   ├── inkeep.config.ts         # Workspace configuration file
-│   ├── projects/
-│   │   ├── my-agent-project/
-│   │   │   ├── index.ts
-│   │   │   ├── agents/
-│   │   │   │   ├── main-agent.ts
-│   │   │   │   └── support-agent.ts
-│   │   │   ├── tools/
-│   │   │   │   ├── search-tool.ts
-│   │   │   │   └── calculator-tool.ts
-│   │   │   ├── data-components/
-│   │   │   │   ├── user-profile.ts
-│   │   │   │   └── product-catalog.ts
-│   │   │   ├── external-agents/
-│   │   │   │   ├── exernal-agent-example.ts
-│   │   │   └── environments/
-│   │   │       ├── index.ts
-│   │   │       ├── development.env.ts
-│   │   │       └── production.env.ts
-│   │   └── another-project/       # Additional projects can coexist
-│   │       ├── index.ts
-│   │       └── ...
-```
-
-<Note>
-The `src/inkeep.config.ts` file defines workspace configuration for all projects. See [Workspace Configuration](/typescript-sdk/workspace-configuration) for details.
-</Note>
-
-## Project files and directories
-
-### `index.ts`
-
-The project entry point inside each project directory that exports your project definition:
-
-```typescript file="src/projects/my-agent-project/index.ts"
-// Located inside project directory (e.g., my-agent-project/index.ts)
-import { project } from '@inkeep/agents-sdk';
-import { mainAgent } from './agents/main-agent';
-import { supportAgent } from './agents/support-agent';
-import { searchTool } from './tools/search-tool';
-import { calculatorTool } from './tools/calculator-tool';
-import { userProfile } from './data-components/user-profile';
-
-export const myProject = project({
-  id: 'my-agent-project',
-  name: 'My Agent Project',
-  description: 'A comprehensive multi-agent system',
-  subAgents: () => [mainAgent, supportAgent],
-  tools: () => [searchTool, calculatorTool],
-  dataComponents: () => [userProfile],
-});
-```
-
-### `agents/`
-
-Contains agent definitions. Each file typically exports one agent:
-
-```typescript
-// agents/customer-support.ts
-import { agent, subAgent } from '@inkeep/agents-sdk';
-
-const routerSubAgent = subAgent({
-  id: 'support-router',
-  name: 'Support Router',
-  prompt: 'Route customer inquiries to appropriate specialists',
-});
-
-const billingSubAgent = subAgent({
-  id: 'billing-specialist',
-  name: 'Billing Specialist',
-  prompt: 'Handle billing and payment inquiries',
-});
-
-export const customerSupportAgent = agent({
-  defaultSubAgent: routerSubAgent,
-  subAgents: () => [routerSubAgent, billingSubAgent],
-});
-```
-
-See [Agents & Sub Agents](https://docs.inkeep.com/typescript-sdk/agent-settings) for more information about creating and configuring agents and sub agents.
-
-### `tools/`
-
-Tool definitions that can be used by Sub Agents:
-
-```typescript
-// tools/database-query.ts
-import { mcpTool } from '@inkeep/agents-sdk';
-
-export const databaseQueryTool = mcpTool({
-  id: 'db-query',
-  name: 'Database Query Tool',
-  description: 'Execute SQL queries against the database',
-  inputSchema: {
-    type: 'object',
-    properties: {
-      query: { type: 'string' },
-      database: { type: 'string' }
-    }
-  },
-  // Tool implementation...
-});
-```
-
-See [MCP Tools](https://docs.inkeep.com/typescript-sdk/tools/mcp-tools) and [Function Tools](https://docs.inkeep.com/typescript-sdk/tools/function-tools) for more information about creating and configuring MCP tools and function tools.
-
-### `data-components/`
-
-Data components for structured UI output:
-
-```typescript
-// data-components/customer-data.ts
-import { dataComponent } from '@inkeep/agents-sdk';
-import { z } from 'zod';
-
-export const customerData = dataComponent({
-  id: 'customer-data',
-  name: 'Customer Information',
-  description: 'Customer profile and interaction history',
-  props: z.object({
-    customerId: z.string().describe("Customer ID"),
-    name: z.string().describe("Customer name"),
-    email: z.string().describe("Customer email"),
-  }),
-});
-```
-
-See [Data Components](https://docs.inkeep.com/typescript-sdk/structured-outputs/data-components) for more information about creating and configuring data components.
-
-### `external-agents/`
-
-External agent definitions:
-
-```typescript
-import { externalAgent } from '@inkeep/agents-sdk';
-
-export const exernalAgentExample = externalAgent({
-  id: 'exernal-agent-example',
-  name: 'Exernal Agent Example',
-  description: 'An example external agent',
-  baseUrl: 'https://api.example.com/agents/support',
-  credentialReference: myCredentialReference,
-});
-```
-
-See [External Agents](https://docs.inkeep.com/typescript-sdk/external-agents) for more information about creating and configuring external agents.
-
-### `environments/`
-
-Environment-specific configurations for different deployment stages:
-
-```typescript
-// environments/production.env.ts
-import { registerEnvironmentSettings } from '@inkeep/agents-sdk';
-import { CredentialStoreType } from '@inkeep/agents-core';
-
-export const production = registerEnvironmentSettings({
-  credentials: {
-    "openai-prod": {
-      id: "openai-prod",
-      type: CredentialStoreType.memory,
-      credentialStoreId: "memory-default",
-      retrievalParams: {
-        key: "OPENAI_API_KEY_PROD",
-      },
-    },
-  },
-});
-```
-
-How to add a new project using inkeep add
-
-How to push changes inside your project to the VIsual Builder
-
-How to pull changes from the Visual Builder to your project
-
-## How to add a new project
-
-Use the `inkeep add` command to add template projects from the [Inkeep Agents Cookbook](https://github.com/inkeep/agents/tree/main/agents-cookbook/template-projects) to your workspace.
-
-<Snippet file="cli-prereq.mdx" />
-
-### Step 1: Navigate to your projects directory
-
-Navigate to the `src/projects` directory:
-
-```bash
-cd src/projects
-```
-
-### Step 2: List available templates
-
-To see all available project templates, run `inkeep add` without any arguments:
-
-```bash
-inkeep add
-```
-
-This displays a list of available project templates you can add to your workspace.
-
-### Step 3: Add a project template
-
-Add a specific project template using the `--project` flag:
-
-```bash
-inkeep add --project docs-assistant
-```
-
-<Tip>
-For new projects, we recommend starting with a simple project template like docs-assistant, which you can customize to your needs.
-</Tip>
-
-## Pushing changes to the Visual Builder
-
-After making changes to your project code, use `inkeep push` to sync your local TypeScript project to the Visual Builder. This allows you to continue development using the Visual Builder's drag-and-drop interface.
-
-<Snippet file="cli-prereq.mdx" />
-
-### Step 1: Navigate to your project directory
-
-Change to the directory containing your project's `index.ts` file:
-
-```bash
-cd src/projects/my-agent-project
-```
-
-### Step 2: Push your project
-
-Run the push command:
-
-```bash
-inkeep push
-```
-
-### Step 3: Verify in Visual Builder
-
-After pushing, refresh your Visual Builder. Your project and all its agents, Sub Agents, tools, and data components will be available in the Visual Builder.
-
-### Additional options
-
-**Validate without pushing:**
-
-To validate your project without actually pushing changes, use the `--json` flag:
-
-```bash
-inkeep push --json
-```
-
-## Pulling changes from the Visual Builder
-
-When you make changes in the Visual Builder (such as updating prompts or modifying agent configurations), use `inkeep pull` to sync those changes back to your local TypeScript project.
-
-<Snippet file="pull-prereq.mdx" />
-
-### Step 1: Navigate to your project directory
-
-Change to the directory containing your project's `index.ts` file:
-
-```bash
-cd src/projects/my-agent-project
-```
-
-### Step 2: Pull changes from Visual Builder
-
-Run the pull command:
-
-```bash
-inkeep pull
-```
-
-### Step 3: Verify the changes
-
-Check your project files to see the updates. For example, if you changed an agent's prompt in the Visual Builder:
-
-```bash
-cat agents/my-agent.ts
-```
-
-The file should reflect the updated prompt from the Visual Builder.
-
-<Tip>
-See [CLI Reference](/typescript-sdk/cli-reference#inkeep-pull) for more information about the `inkeep pull` command.
-</Tip>
-
-## How to add a new MCP server
-
-Use the `inkeep add` command to add custom MCP server templates from the [Inkeep Agents Cookbook](https://github.com/inkeep/agents/tree/main/agents-cookbook/template-mcps) to your workspace. These templates provide starter code for common MCP server integrations that you can customize and deploy.
-
-<Snippet file="cli-prereq.mdx" />
-
-### Step 1: Navigate to your workspace root
-
-Navigate to your workspace root directory (where your `package.json` is located):
-
-```bash
-cd /path/to/your/workspace
-```
-
-The CLI will automatically detect the `apps/mcp/app` directory in your workspace.
-
-### Step 2: List available MCP templates
-
-To see all available MCP server templates, run `inkeep add` without any arguments:
-
-```bash
-inkeep add
-```
-
-This displays both project templates and MCP server templates you can add to your workspace.
-
-### Step 3: Add an MCP server template
-
-Add a specific MCP server template using the `--mcp` flag:
-
-```bash
-inkeep add --mcp zendesk
-```
-
-The template will be added to `apps/mcp/app/[template-name]/mcp/route.ts` automatically.
-
-### Step 4: Customize and register
-
-The MCP server will be exposed at `http://localhost:3000/[template-name]/mcp`. Customize it with your API credentials and business logic, then register it as a tool using `mcpTool`:
-
-```typescript
-import { mcpTool } from '@inkeep/agents-sdk';
-
-export const zendeskTool = mcpTool({
-  id: 'zendesk',
-  name: 'zendesk',
-  description: 'Zendesk API',
-  serverUrl: 'http://localhost:3000/zendesk/mcp',
-});
-```
-
-<Tip>
-See [MCP Tools](/typescript-sdk/tools/mcp-tools) for more information about registering MCP servers as tools.
-</Tip>
-
-## Architecture
-
-This project follows a workspace structure with the following services:
-- **Agents Manage UI** (Port 3000): Web interface
-  - The agent framework visual builder. From the builder you can create, manage and visualize all your graphs.
-- **Agents Manage API** (Port 3002): Agent configuration and management
-  - Handles entity management and configuration endpoints.
-- **Agents Run API** (Port 3003): Agent execution and chat processing  
-  - Handles agent communication. You can interact with your agents either over MCP from an MCP client or through our React UI components library
-
-## Deployment Guides
-
-To build and run your own images you can follow the [Build a Custom Image](https://docs.inkeep.com/self-hosting/docker-build) docs.
-
-This repostory contains a `docker-compose.yml` and template `Dockerfile` for each service:
-- `Dockerfile.manage-ui`
-- `Dockerfile.manage-api`
-- `Dockerfile.run-ui`
-- `Dockerfile.migrate`
-
-To build and run:
-```bash
-docker compose build
-docker compose up -d
-```
-
-### Deploy using official prebuilt images
-- [Deploy to Vercel](https://docs.inkeep.com/self-hosting/vercel)
-- [Docker (Local Dev)](https://docs.inkeep.com/self-hosting/docker-local)
-- [GCP Compute Engine](https://docs.inkeep.com/self-hosting/gcp-compute-engine)
-- [GCP Cloud Run](https://docs.inkeep.com/self-hosting/gcp-cloud-run)
-- [AWS EC2](https://docs.inkeep.com/self-hosting/aws-ec2)
-- [Hetzner](https://docs.inkeep.com/self-hosting/hetzner)
-
+<Snippet file="https://raw.githubusercontent.com/inkeep/agents/refs/heads/main/create-agents-template/README.md" />
